# Cloudella

./: test_task.cpp
Cloudella 1.0 C# trial/: Cloudella.sln
Cloudella 1.0 C# trial/Cloudella/: Node.cs  Program.cs  Vault.cs
Cloudella 1.1.1/: Node.cpp  Node.h  Vault.cpp  Vault.h  main.cpp
Cloudella 1.1.1/bunch_of_nodes/: abcd.node.json  defg.node.json  htru.node.json
Cloudella 1.1.1/json_library/include/nlohmann/: json.hpp
Cloudella v1.0.1/: CMakeLists.txt  Node.cpp  Node.h  Vault.cpp  Vault.h
Cloudella v1.0.1/json_library/include/nlohmann/detail/: json_pointer.hpp
Cloudella v1.0.1/json_library/include/nlohmann/detail/conversions/: to_chars.hpp
Cloudella v1.0.1/json_library/include/nlohmann/detail/input/: input_adapters.hpp  json_sax.hpp  lexer.hpp
Cloudella v1.0.1/json_library/include/nlohmann/detail/iterators/: iter_impl.hpp
Cloudella v1.0.1/json_library/include/nlohmann/detail/meta/: type_traits.hpp
Cloudella v1.0.1/json_library/include/nlohmann/detail/output/: serializer.hpp
